# university-task-board

./: app.py  config.py  pyproject.toml  requirements.txt
auth/: db_router.py  notion_headers.py
backend/: settings.py
notionbot/: apps.py
src/: main.py
src/models/: models.py
src/templates/: index.html  mailing.html  records_add.html  users.html
