[tool.poetry]
name = "notionappbot"
version = "0.1.0"
description = ""
authors = ["iva <ivalulyanov1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.8.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.31"
django = "^5.0.6"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
